# persia

./: .env.example  DOCS.md  README.md  pyproject.toml
.claude/: settings.json
persia/: __init__.py  __main__.py  agent.py  cli.py  config.py  display.py
persia/tools/: __init__.py  clipboard.py  filesystem.py  shell.py  system.py  web.py
